Bug 1047214 - Add MediaDataDecoders that uses a GMP for decoding as well as EME decryption. r=edwin